--- a/gradle.properties
+++ b/gradle.properties
@@ -15,9 +15,10 @@ android.useAndroidX=true
 android.enableJetifier=true
 
 # Your Google Places API Key
-PLACES_API_KEY=AIzaSyDbcZUeOo2nk26w9b98jjSHpj1uPKWY6O0
+PLACES_API_KEY=[APIKEY HERE}
 
 INKYPLACES_RELEASE_STORE_FILE=inkyplaces-release-key.keystore
 INKYPLACES_RELEASE_STORE_PASSWORD=Smashh1&
 INKYPLACES_RELEASE_KEY_ALIAS=inkyplaces_alias
+
 INKYPLACES_RELEASE_KEY_PASSWORD=Smashh1&
